<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".NotesActivity">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_notes"
        android:orderInCategory="100"
        android:title="@string/notes"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_calendar"
        android:orderInCategory="101"
        android:title="@string/calendar"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_spinner"
        android:orderInCategory="102"
        android:title="@string/spinner"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_checkboxes"
        android:orderInCategory="103"
        android:title="@string/checkboxes"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_photoalbum"
        android:orderInCategory="104"
        android:title="@string/photoalbum"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_subscription"
        android:orderInCategory="105"
        android:title="@string/subscription"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_splashscreen"
        android:orderInCategory="106"
        android:title="@string/splashscreen"
        app:showAsAction="never" />
</menu>